--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,16 +2,35 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+
     steps:
+      # 1. Checkout repository content
       - uses: actions/checkout@v4
-      - run: npm ci && npm run build
+
+      # 2. Set up Flutter
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.0.0' # Cambia por la versión que estés usando
+
+      # 3. Install npm dependencies (you can skip if not needed)
+      - name: Install npm dependencies
+        run: npm ci
+
+      # 4. Build the Flutter web app
+      - name: Build Flutter web app
+        run: flutter build web
+
+      # 5. Deploy to Firebase Hosting
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
